objects/HealthCloudGA__EhrImmunizationReaction__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Immunization Reactions</relationshipLabel>
        <relationshipName>ImmunizationReactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Details__c</fullName>
        <description>Additional information on reaction</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EhrObservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Observation</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>EHR Immunization Reactions</relationshipLabel>
        <relationshipName>ImmunizationReactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Immunization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Immunization</label>
        <referenceTo>HealthCloudGA__EhrImmunization__c</referenceTo>
        <relationshipLabel>Immunization Reactions</relationshipLabel>
        <relationshipName>ImmunizationReactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reaction255__c</fullName>
        <description>Details of a reaction that follows immunization</description>
        <label>Reaction 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReactionStartDate__c</fullName>
        <description>When did reaction start?</description>
        <label>Reaction Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reaction__c</fullName>
        <description>Details of a reaction that follows immunization</description>
        <label>Reaction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SelfReported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was reaction self-reported?</description>
        <label>Self Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>EHR Immunization Reaction</label>
    <nameField>
        <displayFormat>Reac-{0}</displayFormat>
        <label>EHR Immunization Reaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Immunization Reactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>